[package]
name = "cloudflare-ip-address-changer-rs"
version = "0.5.1"
edition = "2021"

[dependencies]
reqwest = { version = "=0.12.7", features = ["rustls-tls", "json", "charset", "http2", "macos-system-configuration"], default-features = false }
schemars = "=0.8.21"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
tokio = { version = "=1.40.0", features = ["full"] }
toml = "=0.8.19"
