[package]
name = "cloudflare-ip-address-changer-rs"
version = "0.5.3"
edition = "2021"

[dependencies]
reqwest = { version = "=0.12.12", features = ["rustls-tls", "json", "charset", "http2", "macos-system-configuration"], default-features = false }
schemars = "=0.8.21"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
tokio = { version = "=1.43.0", features = ["full"] }
toml = "=0.8.19"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
